--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: python:2.7-alpine
 pages:
   script:
+  - git submodule update
   - pip install -r requirements.txt
   - ./genblog.sh
   artifacts:
