--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: node:12.19.0-alpine
 pages:
   script:
+  - apk add --no-cache python3 python3-dev
   - npm i -g gatsby-cli
   - npm i
   - gatsby build
