--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "gatsby": "^2.24.67",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-remark-copy-linked-files": "^2.3.18",
     "gatsby-plugin-feed": "^2.5.13",
     "gatsby-plugin-google-analytics": "^2.3.15",
     "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-sitemap": "^2.4.17",
+    "gatsby-plugin-typography": "^2.2.0",
+    "gatsby-remark-copy-linked-files": "^2.3.18",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-remark-prismjs": "^3.5.15",
     "gatsby-remark-responsive-iframe": "^2.4.16",
