--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fwn": "^1.0.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.13",
     "typeface-merriweather": "0.0.72",
