--- a/package.json
+++ b/package.json
@@ -8,60 +8,51 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "disqus-react": "^1.0.5",
-    "gatsby": "^2.24.67",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-catch-links": "^2.0.9",
-    "gatsby-plugin-feed": "^2.5.13",
-    "gatsby-plugin-google-analytics": "^2.3.15",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-sitemap": "^2.4.17",
-    "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-remark-copy-linked-files": "^2.3.18",
-    "gatsby-remark-images": "^3.3.32",
-    "gatsby-remark-prismjs": "^3.5.15",
-    "gatsby-remark-responsive-iframe": "^2.4.16",
-    "gatsby-remark-smartypants": "^2.3.12",
-    "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-transformer-remark": "^2.8.37",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "prismjs": "^1.21.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-fwn": "^1.0.6",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.13",
+    "gatsby": "^4.4.0",
+    "gatsby-plugin-disqus": "^1.2.3",
+    "gatsby-plugin-feed": "^4.4.0",
+    "gatsby-plugin-gatsby-cloud": "^4.4.0",
+    "gatsby-plugin-google-analytics": "^4.4.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-remark-copy-linked-files": "^5.4.0",
+    "gatsby-remark-images": "^6.4.0",
+    "gatsby-remark-prismjs": "^6.4.0",
+    "gatsby-remark-responsive-iframe": "^5.4.0",
+    "gatsby-remark-smartypants": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.17",
-    "typography-theme-wordpress-2016": "^0.15.10"
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.14.2"
+    "prettier": "^2.5.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
+  "license": "0BSD",
   "main": "n/a",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
   },
   "scripts": {
-    "dev": "gatsby develop",
-    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
     "build": "gatsby build",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
 }
