--- a/package.json
+++ b/package.json
@@ -8,27 +8,28 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^4.23.1",
+    "gatsby": "^5.14.0",
     "gatsby-plugin-disqus": "^1.2.3",
-    "gatsby-plugin-feed": "^4.4.0",
-    "gatsby-plugin-gatsby-cloud": "^4.4.0",
-    "gatsby-plugin-google-gtag": "^4.12.1",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^4.23.1",
-    "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-sharp": "^4.23.1",
-    "gatsby-remark-copy-linked-files": "^5.4.0",
-    "gatsby-remark-images": "^6.4.0",
-    "gatsby-remark-prismjs": "^6.4.0",
-    "gatsby-remark-responsive-iframe": "^5.4.0",
-    "gatsby-remark-smartypants": "^5.4.0",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-remark": "^5.4.0",
-    "gatsby-transformer-sharp": "^4.23.1",
+    "gatsby-plugin-feed": "^5.14.0",
+    "gatsby-plugin-gatsby-cloud": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-remark-copy-linked-files": "^6.14.0",
+    "gatsby-remark-images": "^7.14.0",
+    "gatsby-remark-prismjs": "^7.14.0",
+    "gatsby-remark-responsive-iframe": "^6.14.0",
+    "gatsby-remark-smartypants": "^6.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "prismjs": "^1.27.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
